--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -76,7 +76,7 @@
     contexts, and authors. At the final stage, a print-version of the dictionary will be published.</msg>
   <msg key="pojectDesc4"/>
   <msg key="contactDesc">Feedback, comments, critique.</msg>
-  <msg key="guidelinesDecl">Description of the TEI markup we use.</msg>
+  <msg key="guidelinesDecl">Description of the edition principles and the encoding of the texts.</msg>
   <msg key="wpCreateDecl">Submit a Working Paper.</msg>
   <msg key="team">Project Team</msg>
   <msg key="teamDesc">Profiles of the Project Team on the website of the Academy of Sciences and Literature, Mainz.</msg>
