--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -69,7 +69,7 @@
   espera dar un nuevo aporte a la investigación de la Escuela de Salamanca y su influencia en la construcción de la teoría política y el derecho en la Edad Moderna.</msg>
  <msg key="pojectDesc4"/>
  <msg key="contactDesc">Comentarios, opiniones, críticas.</msg>
- <msg key="guidelinesDecl">Nuestra codificación TEI.</msg>
+ <msg key="guidelinesDecl">Descripción de los principios de la edición y de la codificación de los textos.</msg>
  <msg key="wpCreateDecl">Información sobre la preparación y presentación de nuestros Working Papers.</msg>
  <msg key="team">Equipo de trabajo</msg>
  <msg key="teamDesc">Miembros del equipo de trabajo en la página de la Academia de Mainz.</msg>
