--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -31,7 +31,7 @@
     <!-- work -->
     <msg key="diplomatic">Diplomatisch</msg>
     <msg key="constituted">Konstituiert</msg>
-    <msg key="corpus">des ganzen Corpus als TEI/XML Dateien</msg>
+    <msg key="corpusVerb">des ganzen Corpus als TEI/XML Dateien</msg>
     <msg key="download">Download</msg>
     
     <msg key="workNotAvailable">Dieses Werk ist noch nicht verfügbar.</msg>
@@ -57,7 +57,7 @@
     <!-- dictionary -->
     <msg key="dictUnderConstruction">Hier entsteht das Wörterbuch der juristisch-politischen Sprache der Schule von Salamanca: ca. 200 Artikel mit lateinischen und spanischen Lemmata, den Quellen selbst entnommen. 
         Die Artikel werden voraussichtlich ab 2019 sukzessive veröffentlicht.</msg>
- 
+    
     <!-- project.html -->
     <msg key="guidelinesDecl">Beschreibung der Editionsprinzipien und der Textkodierung.</msg>
     
