--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -1,42 +1,58 @@
 <catalogue xml:lang="de">
-    <!--Do not edit -->
+<!--Do not edit -->
     
-    <!-- common -->
+  <!-- common -->
     
     <msg key="licenceDesc">Für die Daten des Projekts "Die Schule von Salamanca" gilt (falls nicht anders angegeben) eine</msg>
     
-    <!--author-->
+  <!--author-->
     <msg key="order">Orden</msg>
     <msg key="death">Todesdatum</msg>
-    
+
     <msg key="discipline">Disziplin</msg>
     <msg key="theologian">Theologie</msg>
     <msg key="canonist">Kanonisches Recht</msg>
     <msg key="jurist">Säkulares Recht</msg>
     <msg key="artes">Artes Liberales</msg>
-    
+
     <msg key="philosopher">Philosoph</msg>
     <msg key="artist">Artist</msg>
     <msg key="advocatus">Advokat</msg>
     <msg key="procurator">Prokurator</msg>
-    
+
     <msg key="OP">Dominikaner</msg>
     <msg key="SJ">Jesuit</msg>
     <msg key="OFM">Franziskaner</msg>
     <msg key="OESA">Augustiner</msg>
     <msg key="CRSA">Augustiner</msg>
-    
+
     <msg key="workInProgress">Werk in Arbeit!</msg>
+  
+    <msg key="authorsNotice">Biographische Artikel zu den Autoren der Quellensammlung des Projekts 
+      "Die Schule von Salamanca" werden (voraussichtlich ab 
+      2019) sukzessive auf dieser Seite veröffentlicht.</msg>
     
     <!-- work -->
     <msg key="diplomatic">Diplomatisch</msg>
     <msg key="constituted">Konstituiert</msg>
-    <msg key="corpusVerb">des ganzen Corpus als TEI/XML Dateien</msg>
-    <msg key="download">Download</msg>
+    
+    <msg key="corpus">des ganzen Corpus als TEI/XML Dateien</msg>
+    <msg key="download">Download </msg>
+    <msg key="downloadXML">Download TEI/XML Quelldatei</msg>
+    <msg key="downloadTXTEdit">Download als Plaintext (konstituierte Variante)</msg>
+    <msg key="downloadTXTOrig">Download als Plaintext (diplomatische Variante)</msg>
+    <msg key="downloadRDF">Download von RDF/XML Daten zu diesem Werk</msg>
+    <msg key="downloadCorpus">Download des Corpus als TEI/XML Dateien</msg>
     
     <msg key="workNotAvailable">Dieses Werk ist noch nicht verfügbar.</msg>
-    
-    <!-- Meta Description Tags -->
+  
+    <!-- works/details -->
+    <msg key="worksNotice">Die digitale Quellensammlung des Projekts "Die Schule von Salamanca" besteht 
+      aus insgesamt 116 Werken, die ab Mai 2018 sukzessive auf dieser Seite zur Verfügung gestellt werden. 
+      Hierfür werden die Texte den Spezifikationen der Text Encoding Initiative (TEI) entsprechend aufbereitet;
+      für nähere Informationen siehe die </msg>
+
+<!-- Meta Description Tags -->
     <msg key="metaAuthor">Biobibliographische Informationen über</msg>
     <msg key="metaLemma">Sachartikel zu</msg>
     <msg key="metaWP">SvSal Working Paper</msg>
@@ -53,12 +69,9 @@
     <msg key="metaAuthors">Überblick über die Autoren, deren Texte in der Quellenedition und die weiterhin durch biographische Artikel beschrieben sind.</msg>
     <msg key="metaDictionary">Überblick über die im Projekt erarbeiteten Sachartikel des Wörterbuchs der juridisch-politischen Sprache der Schule von Salamanca</msg>
     <msg key="metaWPs">Überblick über die Working Papers zur Schule von Salamanca, die im Rahmen der vom Projekt veranstalteten Reihe erschienen sind.</msg>
-    
+
     <!-- dictionary -->
     <msg key="dictUnderConstruction">Hier entsteht das Wörterbuch der juristisch-politischen Sprache der Schule von Salamanca: ca. 200 Artikel mit lateinischen und spanischen Lemmata, den Quellen selbst entnommen. 
         Die Artikel werden voraussichtlich ab 2019 sukzessive veröffentlicht.</msg>
-    
-    <!-- project.html -->
-    <msg key="guidelinesDecl">Beschreibung der Editionsprinzipien und der Textkodierung.</msg>
-    
+
 </catalogue>
