Repair "corpus as TEI/XML files" string in works page.

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -1,7 +1,10 @@
 <catalogue xml:lang="de">
 <!--Do not edit -->
     
-  <!-- common -->
+  <!-- Navigation -->
+    <msg key="guidelines">Editionsrichtlinien</msg>
+    
+    <!-- common -->
     
     <msg key="licenceDesc">Für die Daten des Projekts "Die Schule von Salamanca" gilt (falls nicht anders angegeben) eine</msg>
     
@@ -36,7 +39,7 @@
     <msg key="diplomatic">Diplomatisch</msg>
     <msg key="constituted">Konstituiert</msg>
     
-    <msg key="corpus">des ganzen Corpus als TEI/XML Dateien</msg>
+    <msg key="corpusVerb">des ganzen Corpus als TEI/XML Dateien</msg>
     <msg key="download">Download </msg>
     <msg key="downloadXML">Download TEI/XML Quelldatei</msg>
     <msg key="downloadTXTEdit">Download als Plaintext (konstituierte Variante)</msg>
@@ -74,4 +77,7 @@
     <msg key="dictUnderConstruction">Hier entsteht das Wörterbuch der juristisch-politischen Sprache der Schule von Salamanca: ca. 200 Artikel mit lateinischen und spanischen Lemmata, den Quellen selbst entnommen. 
         Die Artikel werden voraussichtlich ab 2019 sukzessive veröffentlicht.</msg>
 
+<!-- project.html -->
+    <msg key="guidelinesDecl">Beschreibung der Editionsprinzipien und der Textkodierung.</msg>
+    
 </catalogue>
