--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -69,7 +69,7 @@
     espera dar un nuevo aporte a la investigación de la Escuela de Salamanca y su influencia en la construcción de la teoría política y el derecho en la Edad Moderna.</msg>
     <msg key="pojectDesc4"/>
     <msg key="contactDesc">Comentarios, opiniones, críticas.</msg>
-    <msg key="guidelinesDecl">Nuestra codificación TEI.</msg>
+    <msg key="guidelinesDecl">Descripción codificación TEI.</msg>
     <msg key="wpCreateDecl">Información sobre la preparación y presentación de nuestros Working Papers.</msg>
     <msg key="team">Equipo de trabajo</msg>
     <msg key="teamDesc">Miembros del equipo de trabajo en la página de la Academia de Mainz.</msg>
@@ -128,7 +128,7 @@
     <msg key="catLink">Enlace en el catálogo</msg>
     <msg key="ownerMaster">Propiedad digital</msg>
     <msg key="titleReadingViev">Título</msg>
-    <msg key="corpus">todo el corpus como archivos TEI/XML</msg>
+    <msg key="corpusVerb">todo el corpus como archivos TEI/XML</msg>
     <msg key="worksNotice">La colección digital de fuentes del proyecto "La Escuela de Salamanca" 
      incluye 116 obras en total, que se publicarán sucesivamente en esta página a partir de 
      mayo de 2018. Para este fin, los textos están codificados por medio de las especificaciones 
