--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -124,15 +124,14 @@
     <msg key="sort">Sort</msg>
     <!--<msg key="next">Next</msg>-->
     
+  <msg key="corpusVerb">the whole corpus as TEI/XML files</msg>
   <msg key="worksNotice">The digital collection of sources of the project "The School of Salamanca" comprises 116 works in 
     total, which are successively published on this page starting in May 2018. For this purpose, the texts 
     are encoded according to the specifications of the Text Encoding Initiative (TEI); for further information, please 
     refer to the </msg>
   
     
-    <msg key="corpus">the whole corpus as TEI/XML files</msg>
-  
-  <!--Work help-->
+    <!--Work help-->
     <msg key="addFunx">Additional Functions</msg>
     <msg key="onPage">on this page</msg>
     <msg key="pages">Click on the page numbers to open the facsimile images:</msg>
