--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -49,7 +49,7 @@
   <msg key="introSearch">Search in the Digital Collection of works, dictionary and biographical entries, and Working Papers.</msg>
   <msg key="introDict">of the Juridical-Political Language of the School of Salamanca.</msg>
   <msg key="introAuthors">Biographical and bibliographical information about the authors represented in the Digital Collection.</msg>
-  <msg key="introWorks">116 works fully transcribed and edited.</msg>
+  <msg key="introWorks">Digital collection of 116 works, edited according to our</msg>
   <msg key="introWorkingPapers">Articles in the project's Working Paper Series.</msg>
   <msg key="introNews">News from the scientific community.</msg>
   <msg key="introProject">Project Team, Description of the Project, Contact and Imprint.</msg>
