--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -48,7 +48,7 @@
     <msg key="introSearch">Búsqueda en textos completos de 116 obras, en el diccionario, en los artículos biográficos y en los Working Papers.</msg>
     <msg key="introDict">Libre acceso al diccionario filosófico-jurídico de la Escuela de Salamanca.</msg>
     <msg key="introAuthors">Acceso a los autores: Curriculum Vitae, bibliografía y referencias a obras dentro del corpus.</msg>
-    <msg key="introWorks">116 obras transcritas y editadas en su totalidad. Clic aquí para ver la lista completa.</msg>
+    <msg key="introWorks">Colección digital de 116 obras, editadas según nuestras</msg>
     <msg key="introWorkingPapers">Working Papers publicados por el proyecto dentro del contexto de la Escuela de Salamanca.</msg>
     <msg key="introNews">Noticias de la comunidad.</msg>
     <msg key="introProject">Equipo de trabajo, Descripción del Proyecto, Contacto y Información legal.</msg>
