Add disclaimer on 'legal' page for English and Spanish versions; add small changes in the privacy declaration.

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -93,5 +93,6 @@
   <!-- legal.html -->
   <msg key="legalTitle">Datenschutzerklärung &amp; Impressum</msg>
   <msg key="privacyDisclaimer">Für Informationen zum Datenschutz auf dieser Webseite siehe die </msg>
+  <msg key="legalDisclaimer"/>
   
 </catalogue>
