--- a/data/i18n/privacy_decl.xml
+++ b/data/i18n/privacy_decl.xml
@@ -49,7 +49,7 @@
                     Frankfurt/Main (<ref type="url" target="http://salamanca.adwmainz.de/">http://salamanca.adwmainz.de/</ref>)
                 </pubPlace>
                 
-                <!-- Angaben zum copyright -->
+                <!-- Information about copyright -->
                 <availability>
                     <licence target="http://creativecommons.org/licenses/by-nc-sa/3.0/">
                         <p xml:id="p_luojpcn3qp3q4" xml:lang="de">Dieses Werk bzw. dieser Inhalt wurde erstellt durch die Akademie der
@@ -87,7 +87,7 @@
                         Nutzungsdaten erfolgt in unserem Auftrag und nach unseren Vorgaben.</p>
                     <div xml:id="div-know-de" type="section">
                         <head xml:id="head-lskfsdfd">Was wissen wir über Ihre Zugriffe auf unser Angebot?</head>
-                        <p xml:id="p-lsdkfjsdf">Beim Zugriff auf das Internet-Angebot werden die folgenden Angaben in 
+                        <p xml:id="p-lsdkfjsdf">Beim Zugriff auf das Internet-Angebot unter der Domain salamanca.school werden die folgenden Angaben in 
                             Protokolldateien auf dem Web- bzw. Anwendungsserver gespeichert:</p>
                         <list>
                             <item xml:id="item-asdlsdkj1">Browser-Informationen (genutzter Web-Browser, Betriebssystem, Spracheinstellung, etc.),</item>
@@ -121,8 +121,15 @@
                         <head xml:id="head-lkjdgdgff">Wir wollen wissen, wer unser Angebot stört oder angreift</head>
                         <p xml:id="p-lsdkjfsfds">Wir behalten uns vor, auf Grundlage unserer berechtigten Interessen 
                             gem. Art. 6 Abs. 1 lit. f. DSGVO, die Angaben der Nutzer zwecks Erkennung von 
-                            Angriffsversuchen und von Spam-Kommentaren im Blog zu verarbeiten. Bei rechtswidrigen Aktivitäten werden wir die 
-                            relevanten bei uns gespeicherten Daten mit Ermittlungsbehörden teilen.</p>
+                            Angriffsversuchen und von Spam-Kommentaren im Blog zu verarbeiten. Außerdem kann bei direkten Angriffsversuchen auf 
+                            unsere Server, die keinen gewöhnlichen Aufruf unseres öffentlichen Internetangebots unter der Domain salamanca.school 
+                            darstellen, zusätzlich zu den <ref target="#div-know-de" type="url">oben genannten Daten</ref> die IP-Adresse des Angreifers 
+                            temporär und in nicht-anonymisierter Form protokolliert und ggf. für sicherheitsrelevante Analysen weiterverarbeitet werden. 
+                            Diese Daten werden jedoch spätestens nach Ablauf von 7 Tagen 
+                            gelöscht.</p> 
+                        <p xml:id="p-sdfjhdfsdf">Bei offensichtlich rechtswidrigen Aktivitäten werden wir die 
+                            relevanten bei uns gespeicherten Daten ggf. mit Ermittlungsbehörden teilen. Eine Weitergabe an Dritte (ausgenommen 
+                            Ermittlungsbehörden) ist jedoch ausgeschlossen.</p>
                     </div>
                     <div xml:id="div-cookies-de" type="section">
                         <head xml:id="head-lksdjfsdf">Cookies</head>
