Update language data.

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -58,6 +58,12 @@
     aus insgesamt 116 Werken, die ab Mai 2018 sukzessive auf dieser Seite zur Verfügung gestellt werden. 
     Hierfür werden die Texte den Spezifikationen der Text Encoding Initiative (TEI) entsprechend aufbereitet;
     für nähere Informationen siehe die </msg>
+  <msg key="alphaEditors">Herausgeber (in alphabetischer Reihenfolge)</msg>
+  <msg key="series">Reihe</msg>
+  <msg key="editionSeries">Die Schule von Salamanca. Eine Digitale Quellensammlung</msg>
+  <msg key="editorsInChief">Herausgeber der Reihe</msg>
+  <msg key="volume">Band</msg>
+  <msg key="digitalPublication">Digitale Veröffentlichung</msg>
   
   <!-- Meta Description Tags -->
   
