--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -137,6 +137,11 @@
     total, which are successively published on this page starting in May 2018. For this purpose, the texts 
     are encoded according to the specifications of the Text Encoding Initiative (TEI); for further information, please 
     refer to the </msg>
+  <msg key="series">Series</msg>
+  <msg key="alphaEditors">Editors (in alphabetical order)</msg>
+  <msg key="editionSeries">The School of Salamanca. A Digital Collection of Sources</msg>
+  <msg key="editorsInChief">Editors of the Series</msg>
+  <msg key="digitalPublication">Digital Publication</msg>
   
   
   <!--Work help-->
