--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -141,6 +141,11 @@
         incluye 116 obras en total, que se publicarán sucesivamente en esta página a partir de 
         mayo de 2018. Para este fin, los textos están codificados por medio de las especificaciones 
         de Text Encoding Initiative (TEI); para más información, por favor consulte las </msg>
+    <msg key="alphaEditors">Editores (en orden alfabético)</msg>
+    <msg key="series">Colección</msg>
+    <msg key="editionSeries">La Escuela de Salamanca. Una Colección Digital de Fuentes</msg>
+    <msg key="editorsInChief">Directores de la colección</msg>
+    <msg key="digitalPublication">Publicación digital</msg>
     
     <!--Work help-->
     <msg key="addFunx">Additional Functions</msg>
