--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -11,6 +11,7 @@
   <!-- common -->
   
   <msg key="licenceDesc">Für die Daten des Projekts "Die Schule von Salamanca" gilt (falls nicht anders angegeben) eine</msg>
+  <msg key="academy">Akademie der Wissenschaften und der Literatur | Mainz</msg>
   
   <!--author-->
   <msg key="order">Orden</msg>
@@ -64,6 +65,7 @@
   <msg key="editorsInChief">Herausgeber der Reihe</msg>
   <msg key="volume">Band</msg>
   <msg key="digitalPublication">Digitale Veröffentlichung</msg>
+  <msg key="dateOfOrigin">Erscheinungsjahr (Druckoriginal)</msg>
   
   <!-- Meta Description Tags -->
   
