Fix small language error.

--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -123,7 +123,7 @@
     <msg key="readWork">Leer</msg>
     <msg key="volNo">Número del tomo</msg>
     <msg key="volTitle">Título del tomo</msg>
-    <msg key="volume">Volúmen</msg>
+    <msg key="volume">Volumen</msg>
     <msg key="volumes">Volúmenes</msg>
     <msg key="1stEd">Edición primera</msg>
     <msg key="thisEd">Edición presenta</msg>
