--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -21,9 +21,9 @@
     <msg key="guidelines">Directrices de edición</msg>
     <msg key="contact">Contacto</msg>
     <msg key="about">Descripción del Proyecto</msg>
-    <msg key="WpIntro">El Working Paper Series de Salamanca, como órgano interdisciplinar, aborda temas filosóficos, jurídicos y teológicos relacionados con la Escuela de Salamanca. La serie refleja las investigaciones del proyecto y también acepta contribuciones de otros investigadores. Las aportaciones pasan por un doble ciego revisión por pares. Para proponer una aportación, nos puede contactar sobre</msg>
+    <msg key="WpIntro">La serie de Working Papers de Salamanca es una colección interdisciplinar de artículos que abordan temas filosóficos, jurídicos y teológicos relacionados con la Escuela de Salamanca. Esta colección refleja tanto la investigación hecha en el proyecto, como las contribuciones realizadas por otros investigadores. Cada propuesta pasa por un proceso de revisión anónima por pares. Si desea enviar un artículo, por favor contáctenos en</msg>
     <msg key="WpIntroTitle">Salamanca Working Papers Series (ISSN 2509-5080)</msg>
-    <msg key="WpGuidelinesDelayed">Más informaciones para autores publicaremos aquí en breve.</msg>
+    <msg key="WpGuidelinesDelayed">Próximamente habrá más información en línea para los autores.</msg>
     <msg key="getAnswers">Cómo llegar hasta nosotros</msg>
     
     <!-- Meta Description Tags -->
